adding middleware and express

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/sahilm0081/nodejs_tuts#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0"
   }
 }
